--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "typescript": "^5.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -36,8 +37,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "typescript": "^5.0.2"
+    "eslint-plugin-react": "^7.32.2"
   },
   "scripts": {
     "start": "react-scripts start",
