--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.4",
-    "typescript": "^5.0.2"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -37,7 +36,11 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint-plugin-react": "^7.32.2",
+    "typescript": "^5.0.2"
+  },
+  "overrides": {
+    "typescript": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
