--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^16.18.23",
@@ -37,7 +36,10 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.2"
+  },
+  "overrides": {
+    "typescript": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
